  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn
  * Add -DLLVM_ENABLE_PER_TARGET_RUNTIME_DIR=OFF. it was turn on by default
    in https://reviews.llvm.org/D107799
    It was causing the second cmake (stage2) build to fail on z3 or libffi.
    Sign that the compiler didn't work correctly.
  * Revert D109342 (bug 51774) for causing build issue on libc++ include

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on m68k, sparc64 and x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Sat, 18 Sep 2021 23:24:00 +0200

llvm-toolchain-snapshot (1:14~++20210827020436+15b2a8e7faf6-1~exp2) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind-X.Y{-dev} packages on sparc and sparc64

  [ Sylvestre Ledru ]
  * Ship clang-repl as part of clang-tools-XX
    See https://reviews.llvm.org/D106813
  * Ship clang-nvlink-wrapper as part of clang-tools-XX
    See https://reviews.llvm.org/D108291
  * debuginfo-tests has been renamed to cross-project-tests

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 31 Aug 2021 22:17:35 +0200

llvm-toolchain-snapshot (1:14~++20210827071740+3ec634e65a02-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * experimental New snapshot release
  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn
  * Upload the various changes from 12 & 13
  * remove "scan-build-py-force-utf-8-opening.diff"
    merged upstream
  * Also install libomptarget-nvptx in libomp-X.Y-dev next to amdgcn

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind on m68k, sparc64 and x32

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 27 Aug 2021 21:56:14 +0200

llvm-toolchain-snapshot (1:14~++20210827020436+15b2a8e7faf6-1~exp2) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable libunwind-X.Y{-dev} packages on sparc and sparc64
